# Company_DeepResearch_Analyst

./: .dockerignore  .env  .gitignore  D1.1.6 Main_Pipeline.ipynb  Dockerfile  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  cloudbuild.yaml  pyproject.toml  streamlit_app.py
agents/: __init__.py  llm.py  sql_tools.py  tools.py
app/: __init__.py  artifacts.py  bootstrap.py  config.py  logging.py  paths.py
company_diligence_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/companies/msft/processed/: msft_chunks_preview.jsonl
data/companies/nvda/processed/: nvda_chunks_preview.jsonl
data/companies/nvda/raw/market_data/: nvda_market_history.csv
data/companies/nvda/raw/press_releases/: press_release_01.txt
data/test_tmp/workflow_4a6c707e1bb64cc497e60919ba570767/data/: app.db
data/test_tmp/workflow_7d8a5588bf734e32a10d906a8772df54/data/: app.db
graph/: __init__.py  workflow.py
mcp_server/: __init__.py
pipelines/: __init__.py  company_registry.py  companyfacts_client.py  market_data.py  press_releases.py  process_documents.py  refresh_company.py  sec_client.py  text_processing.py
presentation/: company_analyst_agent_deck.md  powerpoint_outline.txt  ppt_generator_prompt.txt
prompts/: __init__.py  agent_prompts.py  sql_prompts.py
schemas/: __init__.py  models.py
scripts/: evaluate_workflow.py
skills/: __init__.py
storage/: __init__.py  bootstrap.py  cloud.py  database.py  query_service.py  repositories.py  schema_catalog.py  sql_executor.py  sql_validator.py
tests/: test_sql_tools.py  test_workflow.py
(+8 files in other folders)
